<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #171515">

 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/layoutToHide"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_constraintTop_toTopOf="parent">

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/cantarell_bold"
      android:text="@string/app_name"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/desc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/asul"
      android:text="Use Any Website As App"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textView" />

  <TextView
      android:id="@+id/enterUrl"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="15dp"
      android:layout_marginTop="40dp"
      android:fontFamily="@font/halant"
      android:text="@string/enter_the_website_url_here"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/desc" />

  <androidx.cardview.widget.CardView
      android:id="@+id/cardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:cardBackgroundColor="@color/white"
      app:cardCornerRadius="7dp"
      app:cardElevation="100dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/enterUrl">

   <EditText
       android:id="@+id/url"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/https_www_google_com"
       android:textColor="@color/black"
       android:textColorHint="#836D6D"
       android:textSize="18sp" />
  </androidx.cardview.widget.CardView>

  <Button
      android:id="@+id/button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:backgroundTint="#25D366"
      android:padding="10dp"
      android:text="@string/launch_app"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView" />

  <TextView
      android:id="@+id/hint_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginBottom="20dp"
      android:fontFamily="@font/biryani"
      android:text="@string/double_tap_message"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button" />

  <TextView
      android:id="@+id/suggestion"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="10dp"
      android:background="#3F51B5"
      android:padding="12dp"
      android:text="@string/write_suggestion"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/hint_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>

 <ProgressBar
     android:layout_width="match_parent"
     android:layout_height="10dp"
     android:id="@+id/ProgressBar"
     android:visibility="invisible"
     android:elevation="100dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
     />
 <WebView
     android:id="@+id/webView"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/ProgressBar"
     />
</androidx.constraintlayout.widget.ConstraintLayout>